# moriarty

./: README.md  README.pt-br.md  ROADMAP.md  pyproject.toml
moriarty/: __init__.py
